Order and filter in queries, more translations and edited readme.
